# halite-soija

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
src/: MyBot.rs  RandomBot.rs
src/bot/: main.rs  params.rs
src/bot/brain/: brain.rs  lone_expander.rs  mod.rs  probe.rs  simple.rs  teddy.rs
src/hlt/: mod.rs  networking.rs  types.rs
src/lib/: action.rs  bridge.rs  coord.rs  dir.rs  io.rs  lib.rs  map.rs  math.rs  onion.rs  scratch.rs  space.rs  util.rs  world.rs
src/lib/space/: dijkstra.rs  frame.rs  mask.rs  mod.rs  point.rs  wave.rs
src/runner/: main.rs  runner.rs
src/ua/: bridge.rs  io.rs  map.rs  mod.rs  scratch.rs  space.rs  world.rs
