[package]
name = "umpteenth_anion"
version = "0.3.0"
authors = ["Matti Hänninen <matti@mjhanninen.com>"]
publish = false
readme = "README.md"
license-file = "LICENSE.md"

[features]
default = []
probe = []

[lib]
name = "ua"
path = "src/lib/lib.rs"

[[bin]]
path = "src/bot/main.rs"
name = "MyBot"

[dependencies]
getopts = "0.2"
rand = "0.3"
